# crabrace

./: .dockerignore  .env.example  .gitignore  BENCHMARK_RESULTS.md  BUILD_WORKAROUND.md  CHANGELOG.md  CI_CD.md  CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  DOCKER_DEPLOYMENT.md  Dockerfile  GITHUB_ACTIONS_SETUP.md  GIT_SETUP_SUMMARY.md  KUBERNETES.md  LICENSE  METRICS.md  PERFORMANCE.md  PROJECT_STATUS.md  PROMETHEUS_METRICS_IMPLEMENTATION.md  QUICK_START.md  README.md  SECURITY.md  SESSION_SUMMARY.md  TEST_RESULTS.md  config.production.toml  config.toml.example  docker-compose.yml  prometheus.yml  verify_json.py
.github/: CONTRIBUTING.md
.github/workflows/: release.yml  rust.yml
benches/: http_benchmarks.rs  provider_benchmarks.rs
docs/: CRABRACE_SPECIFICATION.md  CRABRACE_SPECIFICATION_V2.md  FEATURE_PARITY_ANALYSIS.md
examples/: client_example.rs
helm/crabrace/: Chart.yaml  values.yaml
k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  poddisruptionbudget.yaml  service.yaml  servicemonitor.yaml
perf-tests/: load-test-ab.sh  load-test-bombardier.sh  load-test-wrk.sh  stress-test.sh
src/: config.rs  lib.rs  main.rs  metrics.rs  security.rs
src/models/: provider.rs
src/providers/: registry.rs
src/providers/configs/: anthropic.json  azure.json  bedrock.json  deepseek.json  gemini.json  groq.json  lmstudio.json  ollama.json  openai.json  xai.json
