[package]
name = "crabrace"
version = "0.1.0"
edition = "2021"
rust-version = "1.75.0"
authors = ["Crabrace Contributors"]
description = "High-performance HTTP-based AI provider database service written in Rust"
readme = "README.md"
license = "MIT"
repository = "https://github.com/your-org/crabrace"
keywords = ["ai", "llm", "provider", "api", "http"]
categories = ["web-programming::http-server"]

[[bin]]
name = "crabrace"
path = "src/main.rs"

[lib]
name = "crabrace"
path = "src/lib.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP Server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["trace", "cors", "compression-gzip"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Configuration
config = "0.14"
dotenvy = "0.15"

# Error Handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
prometheus = "0.13"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP Client (for library)
reqwest = { version = "0.11", features = ["json"] }

# Concurrency
parking_lot = "0.12"
once_cell = "1.19"

[dev-dependencies]
# Testing
tokio-test = "0.4"
criterion = "0.5"
mockito = "1.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.release-small]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
